login Acitivity(mrunmayi)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="lightyellow">#B3E07F</color>
+    <color name="yellow">#E2C46B</color>
+
 </resources>
