--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -11,15 +11,24 @@
     android:gravity="center"
     android:background="@drawable/login_background">
 
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/laLoginLogo"
+        android:layout_width="250sp"
+        android:layout_height="250dp"
+        android:layout_gravity="center_horizontal"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/logo" />
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/tvSplash"
         android:text="Route Rangers"
-        android:textSize="24dp"
+        android:textSize="27dp"
         android:textColor="#7A058C"
-        android:textStyle="bold"
-        android:fontFamily="sans-serif-light"
+        android:textStyle="bold|italic"
+        android:fontFamily="cursive"
         android:gravity="center"/>
 
-</RelativeLayout>
+</LinearLayout>
