--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,13 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="blue">#FF00A1</color>
+    <color name="red">#FF0000</color>
+    <color name="purple">#800080</color>
+    <color name="yellow">#FFFF00</color>
+    <color name="green">#008000</color>
+    <color name="darcula">#2b2b2b</color>
+    <color name="deft">#DDFFFFFF</color>
+    <color name="brown">#808000</color>
+    <color name="orange">#E9651E</color>
 </resources>
