--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -14,7 +14,7 @@
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/laLoginLogo"
         android:layout_width="250sp"
-        android:layout_height="250dp"
+        android:layout_height="250sp"
         android:layout_gravity="center_horizontal"
         app:lottie_autoPlay="true"
         app:lottie_loop="true"
@@ -25,10 +25,11 @@
         android:layout_height="wrap_content"
         android:id="@+id/tvSplash"
         android:text="Route Rangers"
-        android:textSize="27dp"
+        android:textSize="35dp"
         android:textColor="#7A058C"
         android:textStyle="bold|italic"
         android:fontFamily="cursive"
         android:gravity="center"/>
+
 
 </LinearLayout>
