--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -60,6 +60,7 @@
                 <androidx.appcompat.widget.AppCompatButton
                     android:layout_width="225dp"
                     android:layout_height="wrap_content"
+                    android:id="@+id/btnuserlogin"
                     android:text="LogIn"
                     android:textStyle="bold"
                     android:textSize="24dp"
