--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -19,6 +19,7 @@
             app:cardBackgroundColor="@color/material_dynamic_neutral70"
             app:cardCornerRadius="24sp"
             app:cardElevation="24sp">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -119,3 +120,4 @@
             </LinearLayout>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
+    </ScrollView>
