--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,7 @@
     <color name="deft">#DDFFFFFF</color>
     <color name="brown">#808000</color>
     <color name="orange">#E9651E</color>
+    <color name="pink">#E91E63</color>
+    <color name="lite_pink">#D14F80</color>
+    <color name="light_gray">#</color>
 </resources>
