--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,10 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeActivity">
+    tools:context=".HomeActivity"
+    android:orientation="vertical">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/tvName"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_margin="16sp"
+        android:fontFamily="sans-serif-condensed-medium"
+        android:text="Name"
+        android:textColor="@color/black"
+        android:textSize="19sp"
+        android:textStyle="bold"
+        android:background="@drawable/etshape"
+        android:padding="16sp"
+        />
+    <TextView
+        android:id="@+id/tvEmail"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_margin="16sp"
+        android:fontFamily="sans-serif-condensed-medium"
+        android:text="Emailid"
+        android:textColor="@color/black"
+        android:textSize="19sp"
+        android:textStyle="bold"
+        android:background="@drawable/etshape"
+        android:padding="16sp"
+        />
+    <androidx.appcompat.widget.AppCompatButton
+        android:layout_width="225dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/BtnSignOut"
+        android:layout_gravity="center"
+        android:background="@drawable/etshape"
+        android:fontFamily="sans-serif-condensed-medium"
+        android:text="SignOut"
+        android:textSize="24dp"
+        android:textStyle="bold"
+        android:layout_margin="16sp"
+        android:layout_marginTop="10dp"
+        android:padding="16dp"/>
+
+</LinearLayout>
